[package]
name = "risp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    rustyline="9.1.2"
    rustyline-derive="0.6.0"
    clap="3.0"
    log="0.4"
    env_logger="0.9"
    anyhow="1.0"
    thiserror="1.0"
